change index file location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     <title>Welcome</title>
   </head>
   <body id="bg-img">
@@ -20,16 +20,16 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="/" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About Me</a>
+            <a href="dist/about.html" class="nav-link">About Me</a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">My Work</a>
+            <a href="dist/work.html" class="nav-link">My Work</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact Me</a>
+            <a href="dist/contact.html" class="nav-link">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -67,5 +67,5 @@
     integrity="sha256-6EA3edRalZC0PA7PmE6+Eedf0pgmMNZYOQpgAaZ2h3A="
     crossorigin="anonymous"
   ></script>
-  <script src="../app.js"></script>
+  <script src="app.js"></script>
 </html>
