add links shorter

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Max <span class="text-secondary">Onyshchenko</span>
       </h1>
       <h2 class="sm-heading">
-        Front-End Developer
+        Front-End Developer, MERN Developer
       </h2>
       <div class="icons">
         <a href="https://github.com/Max0nyshchenko" target="_blank">
